# kangaroo

./: .gitignore  AGENTS.md  BENCHMARK.md  BENCHMARKS.md  CHANGELOG.md  Cargo.toml  PKGBUILD  README.md  justfile
.github/: FUNDING.yml
.github/workflows/: ci.yml  crates.yml
benches/: solve_benchmark.rs
examples/: debug_run.rs
src/: benchmark.rs  cli.rs  convert.rs  lib.rs  math.rs  modular.rs  solver.rs
src/cpu/: cpu_solver.rs  dp_table.rs  init.rs
src/crypto/: mod.rs
src/gpu/: buffers.rs  mod.rs  pipeline.rs
src/gpu_crypto/: context.rs  mod.rs  shaders.rs
src/gpu_crypto/shaders/: curve.wgsl  field.wgsl
src/provider/: boha.rs  mod.rs
src/shaders/: kangaroo_affine.wgsl
tests/: cpu_vs_gpu.rs  mod_constraint.rs  puzzle_solve.rs
